--- a/index.html
+++ b/index.html
@@ -286,6 +286,14 @@
             background: #34C759;
         }
 
+        .btn-delete {
+            background: #FF3B30;
+        }
+
+        .btn-cancel {
+            background: #FF9500;
+        }
+
         .empty-state {
             text-align: center;
             padding: 60px 20px;
@@ -480,7 +488,12 @@
 
         <!-- Cutter Tab -->
         <div id="cutter" class="tab-content">
-            <h1>Cut Queue</h1>
+            <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 25px;">
+                <h1 style="margin: 0;">Cut Queue</h1>
+                <button class="btn btn-secondary" onclick="clearAllCompleted()" style="padding: 10px 20px; font-size: 14px;">
+                    🗑️ Clear All Completed
+                </button>
+            </div>
             
             <div class="filter-bar">
                 <button class="filter-btn active" onclick="setFilter('pending')">Pending (<span id="pending-count">0</span>)</button>
@@ -740,10 +753,21 @@
                             <button class="btn-action btn-start" onclick="updateStatus('${request.id}', 'in-progress')">
                                 Start Cut
                             </button>
+                            <button class="btn-action btn-cancel" onclick="deleteRequest('${request.id}')">
+                                Cancel
+                            </button>
                         ` : ''}
                         ${request.status === 'in-progress' ? `
                             <button class="btn-action btn-complete" onclick="completeRequest('${request.id}')">
                                 Mark Complete
+                            </button>
+                            <button class="btn-action btn-cancel" onclick="deleteRequest('${request.id}')">
+                                Cancel
+                            </button>
+                        ` : ''}
+                        ${request.status === 'completed' ? `
+                            <button class="btn-action btn-delete" onclick="deleteRequest('${request.id}')">
+                                Delete
                             </button>
                         ` : ''}
                     </div>
@@ -757,6 +781,42 @@
                 await update(requestRef, { status: newStatus });
             } catch (error) {
                 alert('Error updating status: ' + error.message);
+            }
+        };
+
+        window.deleteRequest = async function(requestId) {
+            if (!confirm('Are you sure you want to delete this request?')) {
+                return;
+            }
+
+            try {
+                const requestRef = ref(database, `cutRequests/${requestId}`);
+                await set(requestRef, null); // Delete by setting to null
+            } catch (error) {
+                alert('Error deleting request: ' + error.message);
+            }
+        };
+
+        window.clearAllCompleted = async function() {
+            const completedRequests = allRequests.filter(r => r.status === 'completed');
+            
+            if (completedRequests.length === 0) {
+                alert('No completed requests to clear');
+                return;
+            }
+
+            if (!confirm(`Delete all ${completedRequests.length} completed requests?`)) {
+                return;
+            }
+
+            try {
+                for (const request of completedRequests) {
+                    const requestRef = ref(database, `cutRequests/${request.id}`);
+                    await set(requestRef, null);
+                }
+                alert(`✅ Cleared ${completedRequests.length} completed requests`);
+            } catch (error) {
+                alert('Error clearing requests: ' + error.message);
             }
         };
 
