--- a/index.html
+++ b/index.html
@@ -453,6 +453,7 @@
                     <option value="Plumbing">Plumbing</option>
                     <option value="Siding">Siding</option>
                     <option value="Fascia">Fascia</option>
+                    <option value="Cabinet">Cabinet</option>
                 </select>
             </div>
             
@@ -461,6 +462,8 @@
                 <select id="thickness">
                     <option value='1/8"'>1/8"</option>
                     <option value='3/8"'>3/8"</option>
+                    <option value='7/16"'>7/16"</option>
+                    <option value='5/8"'>5/8"</option>
                 </select>
             </div>
 
@@ -471,6 +474,7 @@
                     <option value="Shay Gray">Shay Gray</option>
                     <option value="Antelope">Antelope</option>
                     <option value="Crescent White">Crescent White</option>
+                    <option value="OSB">OSB</option>
                 </select>
             </div>
 
@@ -586,7 +590,9 @@
             { thickness: '3/8"', color: 'Black Satin' },
             { thickness: '3/8"', color: 'Shay Gray' },
             { thickness: '3/8"', color: 'Antelope' },
-            { thickness: '3/8"', color: 'Crescent White' }
+            { thickness: '3/8"', color: 'Crescent White' },
+            { thickness: '7/16"', color: 'OSB' },
+            { thickness: '5/8"', color: 'OSB' }
         ];
 
         // Initialize inventory
