Move OSB to thickness dropdown instead of color

--- a/index.html
+++ b/index.html
@@ -462,8 +462,8 @@
                 <select id="thickness">
                     <option value='1/8"'>1/8"</option>
                     <option value='3/8"'>3/8"</option>
-                    <option value='7/16"'>7/16"</option>
-                    <option value='5/8"'>5/8"</option>
+                    <option value='7/16" OSB'>7/16" OSB</option>
+                    <option value='5/8" OSB'>5/8" OSB</option>
                 </select>
             </div>
 
@@ -474,7 +474,6 @@
                     <option value="Shay Gray">Shay Gray</option>
                     <option value="Antelope">Antelope</option>
                     <option value="Crescent White">Crescent White</option>
-                    <option value="OSB">OSB</option>
                 </select>
             </div>
 
@@ -591,8 +590,8 @@
             { thickness: '3/8"', color: 'Shay Gray' },
             { thickness: '3/8"', color: 'Antelope' },
             { thickness: '3/8"', color: 'Crescent White' },
-            { thickness: '7/16"', color: 'OSB' },
-            { thickness: '5/8"', color: 'OSB' }
+            { thickness: '7/16" OSB', color: 'N/A' },
+            { thickness: '5/8" OSB', color: 'N/A' }
         ];
 
         // Initialize inventory
