--- a/index.html
+++ b/index.html
@@ -13,8 +13,35 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            background: #f5f5f5;
+            background: linear-gradient(to bottom, 
+                rgba(255, 240, 240, 0.3) 0%,
+                rgba(255, 240, 240, 0.3) 7.7%,
+                rgba(255, 255, 255, 0.3) 7.7%,
+                rgba(255, 255, 255, 0.3) 15.4%,
+                rgba(255, 240, 240, 0.3) 15.4%,
+                rgba(255, 240, 240, 0.3) 23.1%,
+                rgba(255, 255, 255, 0.3) 23.1%,
+                rgba(255, 255, 255, 0.3) 30.8%,
+                rgba(255, 240, 240, 0.3) 30.8%,
+                rgba(255, 240, 240, 0.3) 38.5%,
+                rgba(240, 245, 255, 0.4) 38.5%,
+                rgba(240, 245, 255, 0.4) 53.8%,
+                rgba(255, 255, 255, 0.3) 53.8%,
+                rgba(255, 255, 255, 0.3) 61.5%,
+                rgba(255, 240, 240, 0.3) 61.5%,
+                rgba(255, 240, 240, 0.3) 69.2%,
+                rgba(255, 255, 255, 0.3) 69.2%,
+                rgba(255, 255, 255, 0.3) 76.9%,
+                rgba(255, 240, 240, 0.3) 76.9%,
+                rgba(255, 240, 240, 0.3) 84.6%,
+                rgba(255, 255, 255, 0.3) 84.6%,
+                rgba(255, 255, 255, 0.3) 92.3%,
+                rgba(255, 240, 240, 0.3) 92.3%,
+                rgba(255, 240, 240, 0.3) 100%
+            );
+            background-attachment: fixed;
             padding: 20px;
+            min-height: 100vh;
         }
 
         .container {
